完成国密算法的集成 >>> 必须删除core.yaml中原来的BCCSP中的SW配置

--- a/sm_usage/base/docker-compose-base.yaml
+++ b/sm_usage/base/docker-compose-base.yaml
@@ -28,6 +28,7 @@ services:
     - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
     - ../crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/msp:/var/hyperledger/orderer/msp
     - ../crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/:/var/hyperledger/orderer/tls
+    - ../sm/orderer.yaml:/etc/hyperledger/fabric/orderer.yaml
     ports:
       - 7050:7050
 
