--- a/sm_usage/base/peer-base.yaml
+++ b/sm_usage/base/peer-base.yaml
@@ -12,7 +12,7 @@ services:
       # the following setting starts chaincode containers on the same
       # bridge network as the peers
       # https://docs.docker.com/compose/networking/
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=e2e_cli_default
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=sm_usage_default
       #- CORE_LOGGING_LEVEL=ERROR
       - CORE_LOGGING_LEVEL=DEBUG
       - CORE_PEER_TLS_ENABLED=true
@@ -22,5 +22,8 @@ services:
       - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
       - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
       - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
+      - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/msp
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+    volumes:
+    - ../sm/core.yaml:/etc/hyperledger/fabric/core.yaml
     command: peer node start
