--- a/e2e_sm/core.yaml
+++ b/e2e_sm/core.yaml
@@ -251,7 +251,7 @@ peer:
             # TODO: The default Hash and Security level needs refactoring to be
             # fully configurable. Changing these defaults requires coordination
             # SHA2 is hardcoded in several places, not only BCCSP
-            Hash: SH256
+            Hash: SM3
             Security: 256
             # Location of Key Store
             FileKeyStore:
