完成rsa支持的测试

--- a/rsa_usage/base/docker-compose-base.yaml
+++ b/rsa_usage/base/docker-compose-base.yaml
@@ -9,7 +9,7 @@ services:
 
   orderer.example.com:
     container_name: orderer.example.com
-    image: hyperledger/fabric-orderer:1.4.4
+    image: hyperledger/fabric-orderer:1.4.4-rsa
     environment:
       - ORDERER_GENERAL_LOGLEVEL=debug
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
@@ -28,7 +28,6 @@ services:
     - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
     - ../crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/msp:/var/hyperledger/orderer/msp
     - ../crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/:/var/hyperledger/orderer/tls
-    - ../sm/orderer.yaml:/etc/hyperledger/fabric/orderer.yaml
     ports:
       - 7050:7050
 
