--- a/rsa_usage/docker-compose-cli.yaml
+++ b/rsa_usage/docker-compose-cli.yaml
@@ -39,12 +39,12 @@ services:
 
   cli:
     container_name: cli
-    image: hyperledger/fabric-tools:1.4.4
+    image: hyperledger/fabric-tools:1.4.4-rsa
     tty: true
     environment:
       - GOPATH=/opt/gopath
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_LOGGING_LEVEL=DEBUG
+      - FABRIC_LOGGING_SPEC=DEBUG
       - CORE_PEER_ID=cli
       - CORE_PEER_ADDRESS=peer0.org1.example.com:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
@@ -61,7 +61,6 @@ services:
         - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
         - ./examples/chaincode/:/opt/gopath/src/github.com/chaincode
         - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
-        - ./sm/core.yaml:/etc/hyperledger/fabric/core.yaml
         - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/  
     depends_on:
       - orderer.example.com
